# ironlady_customer_service_chatbot

./: .gitignore  README.md  check_models.py  main.py  pyproject.toml
controllers/: chat_controller.py
data/: system_prompt.txt
models/: chat.py
services/: chat_service.py
static/: styles.css
templates/: index.html
